# portfolio-projects

./: .gitignore  README.md
computer-science/: README.md
computer-science/a-task-manager-written-in-rust/: a-task-manager-written-in-rust.md
computer-science/a-task-manager-written-in-rust/backend/: Cargo.toml
content-management-systems/: README.md
content-management-systems/website-assets/: child-theme.css  footer.html  functions.php  github-gists-formatting.css  global-variables.md  header.html  topics-cloud-shortcode.php  topics-cloud.css
content-management-systems/website-assets/badge-icons/: box-archive-solid.xml  code-solid.xml  dice-d20-solid.xml
data-science/: README.md
data-science/a-containerized-ml-application-for-socioeconomic-analysis/: a-containerized-ml-application-for-socioeconomic-analysis-pt-1.md
data-science/sentiment-analysis-with-python/: .gitignore  requirements.txt  sentiment-analysis-with-python-pt-1.md  sentiment-analysis-with-python-pt-2.md
data-science/sentiment-analysis-with-python/interface_design/: P004A020_design_main.psd
data-science/socioeconomic-outlook-mexico-2023/: .gitignore  Socioeconomic Outlook Mexico 2023 Kick-Off.pptx
machine-learning/: README.md
machine-learning/sentiment-analysis-with-python/: .gitignore  README.md  requirements.txt  sentiment-analysis-with-python-pt-1.md  sentiment-analysis-with-python-pt-2.md  sentiment-analysis-with-python.md
probability-and-statistics/: README.md
probability-and-statistics/markov-chains-toolbox/: markov_chains_toolbox.py
(+57 files in other folders)
