[package]
name = "task-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
# General libs
# -----------
# Tokio is a runtime for asynchronous I/O
tokio = { version = "1", features = [ "full" ] }
# Futures are single eventual values produced by asynchronous computations
futures = "0.3"
# Used to remove boilerplate code for errors
thiserror = "1.0"

# JSON Libs
# -----------
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

# Web Libs
# -----------
warp = "0.3"

# DB Libs
# -----------
sqlx = { version = "0.5", features = [ "runtime_tokio_rustls", "postgres" ] }
sqlb = "0.0.7"

